[package]
name = "randomx-rs"
version = "0.1.0"
edition = "2021"
authors = ["connor33341","tevador","SChernykh","hyc"]
description = "Rust implementation of RandomX proof-of-work algorithm"
repository = "https://github.com/connor33341/RandomX-RS"
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["crypto", "cryptocurrency", "pow", "randomx", "monero"]
categories = ["cryptography", "algorithms"]

[[bin]]
name = "randomx-rs"
path = "src/main.rs"

[[bin]]
name = "randomx-benchmark"
path = "src/bin/benchmark.rs"

[lib]
name = "randomx_rs"
path = "src/lib.rs"

[dependencies]
libc = "0.2"
bitflags = "2.0"
blake2-rfc = "0.2.18"
lazy_static = "1.4"
cfg-if = "1.0"
hex = "0.4"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
bindgen = "0.69"

[features]
default = []
large_pages = []
hwloc = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false
